# gf-contrib

./: .gitignore  LexAttemptoDan.gf  README.md
AMR/: README.md
SweCcn/: README.md
YAQL/: BuildQueryBul.gf  BuildQueryCat.gf  BuildQueryChi.gf  BuildQueryDan.gf  BuildQueryDut.gf  BuildQueryEng.gf  BuildQueryFin.gf  BuildQueryFre.gf  BuildQueryGer.gf  BuildQueryInterface.gf  BuildQueryIta.gf  BuildQueryNor.gf  BuildQueryRon.gf  BuildQueryRus.gf  BuildQuerySpa.gf  BuildQuerySwe.gf  NumeralHaskell.gf  NumeralSPARQL.gf  QueryArithm.gf  QueryArithmChi.gf  QueryArithmEng.gf  QueryArithmGer.gf  QueryArithmHaskell.gf  QueryArithmSwe.gf  QueryPhil.gf  QueryPhilEng.gf  QueryPhilFin.gf  QueryPhilFre.gf  QueryPhilSwe.gf  QueryProton.gf  QueryProtonEng.gf  README  ResHaskell.gf  ResSPARQL.gf  YAQL.gf  YAQL1SPARQL.gf  YAQLBul.gf  YAQLCat.gf  YAQLChi.gf  YAQLDan.gf  (+16 more)
attempto/: AttemptoDan.gf  LexAttemptoDan.gf  LexAttemptoFin.gf  LexAttemptoFre.gf  LexAttemptoGer.gf  LexAttemptoSwe.gf  TestAttemptoDan.gf  TestAttemptoFin.gf  TestAttemptoFre.gf  TestAttemptoGer.gf  TestAttemptoIta.gf  TestAttemptoSwe.gf
c-bindings/: PGFFFI.hs  build-gfctest.sh
cade-2011/: Dockerfile  Makefile  Prop.gf  Prop.hs  PropENF.gf  PropEng.gf  PropFin.gf  PropFre.gf  PropGer.gf  PropI.gf  PropLatex.gf  PropPor.gf  PropStr.gf  PropSwe.gf  README  README.md  Trans.hs  TransProp.hs  cade.cabal  stack.yaml
catgram/: CatGram.gf  CatGramCCGEng.gf  CatGramCCGEus.gf  CatGramLambda.gf  README.md
character-lexing/: Love.gf  LoveEng.gf  LoveMlt.gf  LoveMltX.gf  Makefile  README.md  ResMlt.gf  parse.hs  strings.mlt.txt  strings.mltx.txt
core-wordnet/: CoreWordnet.gf  CoreWordnetEng.gf  CoreWordnetIce.gf  core-isl.txt
extmini/: GrammarIta.gf  LexiconIta.gf  ResIta.gf
foods/: FoodsChi.gf  FoodsSpa.gf  LexFoodsGer.gf  _grph.dot
framenet/: README.md
gfcc/: CleanJVM.hs  (+6 more)
mgl/wproblems/: Makefile.in  configure  configure.ac  create.in  model.in  pre.scala
mgl/wproblems/data/: auto.pl  basic.pl  categories.pl  classes.pl  cli.pl  gui.pl  linear.pl  tactics.pl
mgl/wproblems/examples/: fruit.pl  fruit2.pl  fruit3.pl  fruith.pl
mgl/wproblems/experimental/abstract/: Amount.gf  Class.gf  Farm.gf  Fruits.gf  People.gf  Scalar.gf  TestProblems.gf  WPProblem.gf
mgl/wproblems/experimental/english/: AmountEng.gf  ClassEng.gf  FarmEng.gf  FruitsEng.gf  PeopleEng.gf  ScalarEng.gf  TestProblemsEng.gf  WPProblemEng.gf
mgl/wproblems/experimental/german/: AmountGer.gf  ClassGer.gf  FarmGer.gf  FruitsGer.gf  PeopleGer.gf  ScalarGer.gf  TestProblemsGer.gf  WPProblemGer.gf
mgl/wproblems/experimental/resources/: AmountI.gf  ClassI.gf  FarmI.gf  FruitsI.gf  PeopleI.gf  ScalarI.gf  WPProblemI.gf
mgl/wproblems/experimental/spanish/: AmountSpa.gf  ClassSpa.gf  FarmSpa.gf  FruitsSpa.gf  PeopleSpa.gf  ScalarSpa.gf  TestProblemsSpa.gf  WPProblemSpa.gf
mgl/wproblems/src/gf/: AllProblems.gf  AllProblemsCat.gf  AllProblemsEng.gf  AllProblemsI.gf  AllProblemsProlog.gf  AllProblemsSpa.gf  AllProblemsSwe.gf  Amount.gf  AmountCat.gf  AmountEng.gf  AmountGer.gf  AmountI.gf  AmountProlog.gf  AmountSpa.gf  AmountSwe.gf  ClassCat.gf  ClassGer.gf  ClassI.gf  ClassProlog.gf  ClassSwe.gf  Dialog.gf  DialogCat.gf  DialogEng.gf  DialogI.gf  DialogProlog.gf  DialogSpa.gf  DialogSwe.gf  PeopleEng.gf  PeopleI.gf  Qualifier.gf  QualifierCat.gf  QualifierEng.gf  QualifierI.gf  QualifierProlog.gf  QualifierSpa.gf  QualifierSwe.gf  Scalar.gf  ScalarCat.gf  ScalarEng.gf  ScalarGer.gf  (+30 more)
mgl/wproblems/src/scala/: dsl.scala  gf.scala  prolog.scala  test.scala
mgl/wproblems/test/: fruit.exp
query-converter/: .ghci  .gitignore  AbsMinSQL.hs  AbsRelAlgebra.hs  AbsXPath.hs  Algebra.hs  AlgebraTree.hs  Converter.hs  Design.hs  Fundep.hs  JSON.bnf  KeywordRelAlgebra.bnf  LexKeywordRelAlgebra.hs  LexMinSQL.hs  LexRelAlgebra.hs  LexXPath.hs  Makefile  Makefile.qconv  Makefile.xml  MinSQL.bnf  MinSQL.hs  Natural.hs  OldToXML.hs  OptimizeAlgebra.hs  ParKeywordRelAlgebra.hs  ParMinSQL.hs  ParRelAlgebra.hs  ParXPath.hs  PrintKeywordRelAlgebra.hs  PrintMinSQL.hs  PrintRelAlgebra.hs  PrintXPath.hs  QConv.hs  QConvCGI.hs  README  RelAlgebra.bnf  Relation.hs  Relation2XML.hs  SQLCompiler.hs  SkelMinSQL.hs  (+22 more)
query-converter/GQL/: GQL.cf  README.md  ex0.gql  ex1.gql  ex2.gql
query-converter/gf-grammars/: Countries.gf  CountriesEng.gf  RelQuery.gf  RelQueryEng.gf
query-converter/grammars/: Education.gf  EducationEng.gf  Modelling.gf  ModellingER.gf  ModellingEng.gf  ModellingSwe.gf  Relational.gf  RelationalEng.gf
query-converter/grammars/countries/: CountriesSwe.gf  GFSQLShell.hs  GFSQLShell.java  gf_sql_shell.py
query-converter/webapp/: .gitignore  Main.hs  Makefile  index.html  qconv-webapp.cabal  stack.yaml  style.css
query-converter/webapp/libs/highlight.js/: highlight.pack.js
query-converter/www/: ersyntax.html  index.html  qconv-a.html  qconv-enf.html  qconv-er.html  qconv-i.html  qconv-nf.html  qconv-xml.html  qconv.cgi  qconv.css  qconv.js
(+1290 files in other folders)
