name: cade
version: 0.1
homepage: https://github.com/GrammaticalFramework/gf-contrib/tree/master/cade-2011
author: Aarne Ranta
category: Natural Language Processing
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

executable trans
  hs-source-dirs:
    .
  main-is: Trans.hs
  other-modules:
    TransProp, Prop
  build-depends:
    base,
    gf,
    mtl
  default-language: Haskell2010