name:                qconv
version:             0.1.0.0
synopsis:            Relational query converter
-- description:
homepage:            https://github.com/GrammaticalFramework/gf-contrib/tree/master/query-converter#readme
-- license:
-- license-file:
author:              Aarne Ranta
maintainer:          aarne@chalmers.se
-- copyright:
category:            Database
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

Library
  hs-source-dirs:      . generated
  exposed-modules:     Fundep Algebra OptimizeAlgebra AlgebraTree Viewer Design
                       SQLCompiler Relation2XML XPath
                     --Converter
                       AbsXML ValidateXML
                       MinSQL
                       AbsRelAlgebra PrintRelAlgebra ErrM
  other-modules:       Relation ComposOp
                       AbsMinSQL LexMinSQL ParMinSQL PrintMinSQL
                       PrintXML ParXML LexXML
                     --Natural
  other-extensions:    CPP GADTs KindSignatures DataKinds MagicHash
                       Rank2Types PolyKinds
                       TypeSynonymInstances FlexibleInstances
  build-depends:       base, array, containers, process, text, mtl
  default-language:    Haskell2010

Executable qconv
  hs-source-dirs:      app
  main-is:             QConv.hs
  -- other-modules:
  build-depends:       base, array, containers, process, text, mtl, qconv
  default-language:    Haskell2010
  ghc-options:	       -fwarn-unused-imports

Executable qconv.cgi
  hs-source-dirs:      app
  main-is:             QConvCGI.hs
  ghc-options:	       -main-is QConvCGI -fwarn-unused-imports
  build-depends:       base, process, qconv, cgi, utf8-string, mtl
  default-language:    Haskell2010
