name:                qconv-webapp
version:             0.1.0.0
synopsis:            QConv as a browser webapp
description:         Please see README.md
homepage:            https://github.com/GrammaticalFramework/gf-contrib/tree/master/query-converter#readme
-- license:
-- license-file:
author:              Grégoire Détrez
maintainer:          gregoire.detrez@gu.se
copyright:           2016 Grégoire Détrez
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable qconv-webapp
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , qconv
                     , ghcjs-jquery
                     , data-default
                     , text
                     , ghcjs-base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/qconv
